getting-started/basicapp/deployment/k8s-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basicwebapp
  labels:
    app: basicwebapp
spec:
  template:
    metadata:
      labels:
        app: basicwebapp
    spec:
      containers:
        - name: basicwebapp
          # Replace with your project id
          image: gcr.io/alexamiesgo/basicwebapp
          ports:
            - containerPort: 8080
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          # Values for project to be substituted by build script
          command: ["/cloud_sql_proxy",
                    "-instances=PROJECT_ID:us-central1:basicapp=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
