getting-started/basicapp/deployment/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicwebapp
  labels:
    app: basicwebapp
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: basicwebapp
